# iddqd

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  release.toml  t
.cargo/: mutants.toml
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/iddqd/: Cargo.toml  README.md
crates/iddqd-benches/: Cargo.toml  README.md
crates/iddqd-benches/benches/: benches.rs
crates/iddqd-benches/src/: lib.rs
crates/iddqd-extended-examples/: Cargo.toml  README.md
crates/iddqd-extended-examples/examples/: bumpalo-alloc.rs  typify-types.rs
crates/iddqd-extended-examples/src/: lib.rs
crates/iddqd-schemars/: Cargo.toml  README.md
crates/iddqd-schemars/examples/: schemars-examples.rs  typify-types.rs
crates/iddqd-schemars/src/: lib.rs
crates/iddqd-schemars/tests/output/: bi_hash_map_schema.json  container_schema.json  id_hash_map_schema.json  id_ord_map_schema.json  simple_container_schema.json  tri_hash_map_schema.json
crates/iddqd-soteria-runner/: Cargo.toml  README.md
crates/iddqd-soteria-runner/src/: lib.rs
crates/iddqd-soteria-runner/tests/: runner.rs
crates/iddqd-test-utils/: Cargo.toml  README.md
crates/iddqd-test-utils/src/: alloc_failure.rs  borrowed_item.rs  eq_props.rs  lib.rs  naive_map.rs  panic_safety.rs  serde_utils.rs  test_entry.rs  test_item.rs  unwind.rs
crates/iddqd/examples/: bi-complex.rs  id-complex.rs  tri-complex.rs
crates/iddqd/src/: errors.rs  internal.rs  lib.rs  macros.rs  proofs.rs  test_utils.rs
crates/iddqd/src/bi_hash_map/: daft_impls.rs  entry.rs  entry_indexes.rs  imp.rs  iter.rs  mod.rs  ref_mut.rs  schemars_impls.rs  serde_impls.rs  tables.rs  trait_defs.rs
crates/iddqd/src/id_btree_map/: entry.rs  imp.rs  iter.rs  mod.rs  ref_mut.rs  serde_impls.rs  tables.rs  trait_defs.rs
crates/iddqd/src/id_hash_map/: daft_impls.rs  entry.rs  imp.rs  iter.rs  mod.rs  ref_mut.rs  schemars_impls.rs  serde_impls.rs  tables.rs  trait_defs.rs
crates/iddqd/src/id_index_map/: daft_impls.rs  entry.rs  imp.rs  iter.rs  mod.rs  ref_mut.rs  serde_impls.rs  tables.rs
crates/iddqd/src/id_ord_map/: daft_impls.rs  entry.rs  imp.rs  iter.rs  mod.rs  ref_mut.rs  schemars_impls.rs  serde_impls.rs  tables.rs  trait_defs.rs
crates/iddqd/src/support/: alloc.rs  borrow.rs  btree_table.rs  daft_utils.rs  entry.rs  entry_set.rs  fmt_utils.rs  free_list.rs  hash_builder.rs  hash_table.rs  hash_table_reference.rs  item_index.rs  item_set.rs  map_hash.rs  mod.rs  ordered_set.rs  schemars_utils.rs  size_hint.rs
crates/iddqd/src/test_utils/: imp.rs  mod.rs  naive_map.rs  serde_utils.rs
crates/iddqd/src/tri_hash_map/: daft_impls.rs  entry.rs  entry_indexes.rs  imp.rs  iter.rs  macros.rs  mod.rs  ref_mut.rs  schemars_impls.rs  serde_impls.rs  tables.rs  test_utils.rs  trait_defs.rs
crates/iddqd/tests/: ui.rs
crates/iddqd/tests/integration/: bi_hash_map.rs  hegel_support.rs  id_btree_map.rs  id_hash_map.rs  id_ord_map.rs  main.rs  panic_safety.rs  pathological.rs  schemars_tests.rs  serde_size_hint.rs  size_tests.rs  tri_hash_map.rs
crates/iddqd/tests/snapshots/: map_sizes.txt
crates/iddqd/tests/soteria/: bi_hash_map.rs  hasher.rs  id_hash_map.rs  id_ord_map.rs  main.rs  params.rs  tri_hash_map.rs
crates/iddqd/tests/ui/invalid/: bi_hash_entry_and_modify_stash.rs  bi_hash_entry_and_modify_stash.stderr  bi_hash_occupied_entry_mut_for_each_stash.rs  bi_hash_occupied_entry_mut_for_each_stash.stderr  bi_hash_retain_stash.rs  bi_hash_retain_stash.stderr  id_hash_entry_and_modify_stash.rs  id_hash_entry_and_modify_stash.stderr  id_hash_retain_stash.rs  id_hash_retain_stash.stderr  id_ord_entry_and_modify_stash.rs  id_ord_entry_and_modify_stash.stderr  id_ord_retain_stash.rs  id_ord_retain_stash.stderr  tri_hash_occupied_entry_mut_alias.rs  tri_hash_occupied_entry_mut_alias.stderr  tri_hash_retain_stash.rs  tri_hash_retain_stash.stderr
examples/: tri-complex.rs
scripts/: miri-ignore-leaks.sh  soteria-compile  soteria-rust
src/: hash_table.rs  lib.rs
src/tri_hash_map/: imp.rs  iter.rs  mod.rs  ref_mut.rs  serde_impls.rs  test_utils.rs  trait_defs.rs
