[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.86"

[workspace.lints.clippy]
undocumented_unsafe_blocks = { level = "warn" }

[workspace.lints.rust]
# `cfg(soteria)` is set by the Soteria symbolic-execution frontend.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)", "cfg(soteria)"] }

[workspace.dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"] }
bumpalo = { version = "3.19.0", features = ["allocator-api2", "collections"] }
camino = "1.2.2"
criterion = "0.7.0"
daft = { version = "0.1.5", default-features = false }
equivalent = "1.0.2"
expectorate = "1.2.0"
foldhash = "0.2.0"
# We have to turn on hashbrown's allocator-api2 feature even if we don't expose
# it in our public API. There's no way to refer to the hashbrown Allocator trait
# without it. (The alternative would be to define everything twice: if
# allocator-api2 is turned on, then for e.g. IdHashMap<T, S, A>, otherwise
# IdHashMap<T, S>.)
hashbrown = { version = "0.17.1", default-features = false, features = ["allocator-api2", "inline-more"] }
hegeltest = "0.23.1"
hugealloc = "0.1.1"
iddqd = { path = "crates/iddqd", default-features = false }
iddqd-test-utils = { path = "crates/iddqd-test-utils" }
proptest = { version = "1.7.0", default-features = false, features = ["std"] }
ref-cast = "1.0.24"
schemars = "0.8.22"
serde = "1.0.223"
serde_core = "1.0.223"
serde_json = "1.0.145"
test-strategy = "0.4.3"
trybuild = "1.0.116"
typify = "0.7.0"

[profile.dev]
# Builds with opt-level 1 speed up test runs by around 20x.
opt-level = 1
