[package]
name = "iddqd-benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
criterion.workspace = true
iddqd = { workspace = true, features = ["std"] }
iddqd-test-utils = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
