[package]
name = "iddqd-benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
criterion.workspace = true
foldhash.workspace = true
iddqd = { workspace = true, features = ["default-hasher", "std"] }
iddqd-test-utils = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false

[package.metadata.release]
release = false
