[package]
name = "iddqd-extended-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bumpalo.workspace = true
iddqd = { workspace = true, features = ["allocator-api2", "default-hasher"] }
