[package]
name = "iddqd-schemars"
version = "0.1.0"
description = "JsonSchema implementations for iddqd map types using schemars 0.8"
readme = "README.md"
documentation = "https://docs.rs/iddqd-schemars"
repository = "https://github.com/oxidecomputer/iddqd"
keywords = ["id_map", "schemars", "json-schema", "serialization"]
categories = ["data-structures", "encoding"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
expectorate.workspace = true
iddqd = { workspace = true, features = ["serde", "std", "default-hasher"] }
iddqd-test-utils = { workspace = true, features = ["serde"] }
typify.workspace = true

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true
