[package]
name = "iddqd-test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
iddqd.workspace = true
proptest.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
test-strategy.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json", "iddqd/serde"]
