[package]
name = "iddqd-test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
hugealloc = { workspace = true, optional = true }
iddqd.workspace = true
proptest.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
test-strategy.workspace = true

[features]
# We test once with allocator-api2 + hugealloc, and once without it and with the
# default allocator.
allocator-api2 = ["iddqd/allocator-api2", "dep:hugealloc"]
# We test once with the default hasher, and once with std's RandomState.
default-hasher = ["iddqd/default-hasher"]
std = ["iddqd/std"]
serde = ["dep:serde", "dep:serde_json", "iddqd/serde"]

[package.metadata.release]
release = false
